[metadata]
name = gear
author = OpenStack
author-email = openstack-dev@lists.openstack.org
summary = Pure Python Async Gear Protocol Library
description-file =
    README.rst
home-page = http://pypi.python.org/pypi/gear
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    gear

[entry_points]
console_scripts =
    geard = gear.cmd.geard:main

[bdist_wheel]
universal = 1

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
